# Canvas

./: .gitignore  .gitmodules  CMakeLists.txt  DEFENSIVE_DISCLOSURE.md  README.md
.github/workflows/: pr-ci.yml
Inc/: ThinWin.h
cmake/: FetchFonts.cmake  FetchUfbx.cmake  RuntimeStaging.cmake  WindowsConfig.cmake
docs/: Canvas.md  CanvasEngine.md
docs/CanvasCore/: CanvasCore.md
docs/CanvasSdk/: CanvasResult.md  CanvasSdk.md  IObject.md
scripts/: GenCanvasXFaceIds.py  InstallFBX.ps1
scripts/terrain/: gen_heightmap.py  gen_material_atlas.py  gen_moonsprite.py  gen_skycube.py  gen_starscube.py
src/: Canvas.sln  GOM.sln  ThinWin.sln
src/CanvasConsole/: CMakeLists.txt  CanvasConsole.cpp  CanvasConsole.vcxproj  CanvasConsole.vcxproj.filters  pch.h
src/CanvasCore/: Animation.cpp  Animation.h  BVH.cpp  BVH.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.h  CanvasCore.cpp  CanvasCore.def  CanvasCore.h  CanvasCore.vcxproj  CanvasCore.vcxproj.filters  CanvasElement.h  CanvasObject.cpp  CanvasObject.h  DataSource.h  FontImpl.cpp  FontImpl.h  Generic.cpp  Generic.hpp  GlyphAtlas.cpp  GlyphAtlas.h  GraphicsDevice.h  Light.h  LightBVH.cpp  LightBVH.h  Mesh.h  Model.cpp  Model.h  Module.h  Name.cpp  Name.h  NamedElement.h  NamedObject.cpp  NamedObject.h  Object.cpp  RenderQueueManager.cpp  RenderQueueManager.h  RingBuffer.cpp  (+25 more)
src/CanvasCore/Inc/: Camera.h  Canvas.h  CanvasCore.h  DataSource.h  Graphics.h  Light.h  Logger.h  Model.h  Name.h  NamedObject.h  Object.h  Object.inl  Scene.h  SceneGraph.h  SceneGraph.inl  Transform.h
src/CanvasFbx/: CMakeLists.txt  CanvasFbx.cpp  CanvasFbx.vcxproj  CanvasFbx.vcxproj.filters  dllmain.cpp  pch.h  stdafx.h
src/CanvasFbx/Inc/: CanvasFbx.h
src/CanvasGfx12/: CMakeLists.txt  README.md
src/CanvasGfx12/D3D12ResourceUtils/: CMakeLists.txt  D3D12ResourceUtils.cpp  D3D12ResourceUtils.h  D3D12ResourceUtils.vcxproj  D3D12ResourceUtils.vcxproj.filters  pch.h
src/CanvasGfx12/GpuTask/: CMakeLists.txt  GpuTask.cpp  GpuTask.h  GpuTaskGraph.md  pch.h
src/CanvasGfx12/Lib/: Buffer12.cpp  Buffer12.h  BufferPool.cpp  BufferPool.h  CMakeLists.txt  CanvasGfx12.cpp  CanvasGfx12.def  CanvasGfx12.h  CanvasGfx12.vcxproj  CanvasGfx12.vcxproj.filters  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CopyQueue.cpp  CopyQueue.h  DescriptorHeapAllocator.cpp  DescriptorHeapAllocator.h  DescriptorRing.cpp  DescriptorRing.h  Device12.cpp  Device12.h  FenceToken.h  GpuTask.cpp  GpuTask.h  GraphicsContext12.cpp  GraphicsContext12.h  Instance12.cpp  Instance12.h  Material12.cpp  Material12.h  MeshData12.cpp  MeshData12.h  RenderQueue12.cpp  RenderQueue12.h  ResourceAllocator.cpp  ResourceAllocator.h  ResourceManager.cpp  ResourceManager.h  Surface12.cpp  Surface12.h  SwapChain12.cpp  (+10 more)
src/CanvasGfx12/d3dx12/: d3dx12.h
src/CanvasGraphics12/: CanvasGraphics12.cpp  CanvasGraphics12.def  CanvasGraphics12.h  CanvasGraphics12.vcxproj  CanvasGraphics12.vcxproj.filters  Context.cpp  Context.h  Device12.cpp  Device12.h  GraphicsContext12.cpp  GraphicsContext12.h  GraphicsDevice12.cpp  GraphicsDevice12.h  Surface12.cpp  Surface12.h  SwapChain12.cpp  SwapChain12.h  stdafx.h
src/CanvasLightGarden/: CMakeLists.txt  CanvasLightGarden.cpp  QLogAdapter.h  pch.h  targetver.h
src/CanvasModel/: CMakeLists.txt  CanvasModel.cpp  CanvasModel.vcxproj  CanvasModel.vcxproj.filters  pch.h
src/CanvasModelViewer/: CMakeLists.txt  CanvasModelViewer.cpp  CanvasModelViewer.rc  CanvasModelViewer.vcxproj  CanvasModelViewer.vcxproj.filters  QLogAdapter.h  Resource.h  pch.h  stdafx.cpp  stdafx.h
src/CanvasPackage/: CMakeLists.txt  CanvasPackage.cpp  CpkgBlobTypes.h  CpkgIO.cpp  CpkgIO.h  CpkgLog.h  CpkgSink.cpp  CpkgSink.h  CpkgSource.cpp  CpkgSource.h  CpkgStream.cpp  CpkgStream.h  IMPLEMENTATION_PLAN.md  README.md  pch.h
src/CanvasPackage/Inc/: CanvasPackageData.h
src/CanvasPlatformWin32/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  ImageLoader.cpp  README.md  RawInput.cpp  RawInput.h  pch.h
src/CanvasTerrainViewer/: CMakeLists.txt  CanvasTerrainViewer.cpp  CanvasTerrainViewer.rc  HeightField.cpp  HeightField.h  ImageLoader.cpp  ImageLoader.h  QLogAdapter.h  README.md  SceneConfig.cpp  SceneConfig.h  SkyCubeLoader.cpp  SkyCubeLoader.h  TerrainMaterial.cpp  TerrainMaterial.h  pch.h
src/CanvasTerrainViewer/assets/: scene.json
src/CanvasText/: CMakeLists.txt  CanvasText.cpp  Font.cpp  Font.h  GlyphAtlas.cpp  GlyphAtlas.h  RectanglePacker.cpp  SDFGenerator.cpp  SDFGenerator.h  TextLayout.cpp  TextLayout.h  pch.h
src/CanvasUnitTest/: BVHTest.cpp  CMakeLists.txt  CanvasCollectionsTest.cpp  CanvasInterfacesTest.cpp  CanvasMathTest.cpp  CanvasTextTest.cpp  CanvasUnitTest.vcxproj  CanvasUnitTest.vcxproj.filters  CpkgIOTest.cpp  CpkgSinkTest.cpp  CpkgSourceTest.cpp  CpkgStreamTest.cpp  CpkgTestUtil.h  D3D12ResourceUtilsTest.cpp  GpuTaskGraphTest.cpp  LightBVHTest.cpp  RingBufferTest.cpp  TaskManagerTest.cpp  TaskManagerTypedTest.cpp  TaskSchedulerTest.cpp  TaskSchedulerTypedTest.cpp  pch.h  stdafx.cpp  stdafx.h
src/Common/: CMakeLists.txt  Camera.h  Canvas.h  CanvasCore.h  CanvasObject.h  SceneGraph.h  SlimLog.h  Timer.h  TokenParser.h  Transform.h  pch.h
src/Common/Inc/: TaskManager.h  TaskScheduler.h
src/Common/RingBuffer/: RingBuffer.cpp
src/Common/TaskManager/: TaskManager.cpp
src/Common/TaskScheduler/: TaskScheduler.cpp
src/Debug/: CanvasUnitTest.exp  CanvasUnitTest.lib
src/GOM/: GOM.vcxproj  Generic.cpp
src/HLSL/: CMakeLists.txt  Common.hlsli  DSDisplaced.hlsl  DSDisplacedShadow.hlsl  DSTerrain.hlsl  Displaced.hlsli  HLSL.vcxproj  HLSL.vcxproj.filters  HSDisplaced.hlsl  HSTerrain.hlsl  HlslTypes.h  PSComposite.hlsl  PSDisplaced.hlsl  PSPrimary.hlsl  PSRect.hlsl  PSTerrain.hlsl  PSText.hlsl  Primary.h  Primary.hlsl  Terrain.hlsli  TextSDF.hlsl  VSDisplaced.hlsl  VSFullscreen.hlsl  VSPrimary.hlsl  VSRect.hlsl  VSTerrain.hlsl  VSText.hlsl
src/Inc/: Canvas.h  CanvasCore.h  CanvasFormat.h  CanvasGS.h  CanvasGfx.h  CanvasGraphics12.h  CanvasMath.hpp  CanvasModel.h  CanvasPlatformWin32.h  CanvasRender.h  QLog.h  (+8 more)
src/RectanglePacker/: CMakeLists.txt  RectanglePacker.h
(+49 files in other folders)
